first test are working, need to implement better returns of explorer function

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,9 @@
 CC = gcc
 CFLAGS = -Wall -g -pedantic
+LIBS = ../lib
 
 
-main	: main.c
+main	: main.c $(LIBS)/tools.h $(LIBS)/tools.c
 	$(CC) $(CFLAGS) $^ -o $@
 
 
