--- a/src/makefile
+++ b/src/makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -g -pedantic
 LIBS = ../lib
 
 
-main	: main.c $(LIBS)/tools.h $(LIBS)/tools.c
+main	: main.c $(LIBS)/tools.h $(LIBS)/queue.h $(LIBS)/tools.c $(LIBS)/queue.c
 	$(CC) $(CFLAGS) $^ -o $@
 
 
