threads are working, they still have to restart after finishing their task untill there is no task remaining

--- a/src/makefile
+++ b/src/makefile
@@ -1,9 +1,16 @@
 CC = gcc
-CFLAGS = -Wall -g -pedantic
+CFLAGS = -Wall -g -pedantic -lpthread
 LIBS = ../lib
 
+tools = $(LIBS)/tools*
+queue = $(LIBS)/queue*
+threads = worker_function*
+system_calls = $(LIBS)/enhanced_sc*
 
-main	: main.c $(LIBS)/tools.h $(LIBS)/queue.h $(LIBS)/tools.c $(LIBS)/queue.c
+#$(LIBS)/tools.h $(LIBS)/queue.h $(LIBS)/tools.c $(LIBS)/queue.c
+#$(tools) $(queue) $(threads)
+
+main	: main.c $(tools) $(queue) $(threads) $(system_calls)
 	$(CC) $(CFLAGS) $^ -o $@
 
 
