threadpool seems now working properly with queue

--- a/src/makefile
+++ b/src/makefile
@@ -10,9 +10,19 @@ system_calls = $(LIBS)/enhanced_sc*
 #$(LIBS)/tools.h $(LIBS)/queue.h $(LIBS)/tools.c $(LIBS)/queue.c
 #$(tools) $(queue) $(threads)
 
+.PHONY: default custom
+
 main	: main.c $(tools) $(queue) $(threads) $(system_calls)
 	$(CC) $(CFLAGS) $^ -o $@
 
 
 exe	:
 	./main
+
+
+custom :
+	valgrind --track-origins=yes ./main -q 3 -n 4 -d yeye file*
+
+
+default :
+	valgrind --track-origins=yes ./main -d yeye file*
