NOW is working without memory leaks

--- a/src/makefile
+++ b/src/makefile
@@ -21,8 +21,8 @@ exe	:
 
 
 custom :
-	valgrind --track-origins=yes  --leak-check=full ./main -q 3 -n 4 -d yeye file*
+	valgrind --track-origins=yes  --leak-check=full -s ./main -q 3 -n 4 -d yeye file*
 
 
 default :
-	valgrind --track-origins=yes  --leak-check=full ./main -d yeye file*
+	valgrind --track-origins=yes  --leak-check=full -s ./main -d yeye file*
