--- a/src/makefile
+++ b/src/makefile
@@ -10,22 +10,25 @@ collector = collector*
 master_worker = master_worker*
 node = $(LIBS)/node*
 
+# Do not pay attention to custom and default, they are just for local testing purposes
 
 .PHONY: default custom clean
 
-farm	: farm.c $(master_worker) $(collector) $(tools) $(queue) $(threads) $(system_calls)  $(node)
+farm	: farm.c $(master_worker) $(collector) $(tools) $(queue) $(threads) $(system_calls) $(node)
 	$(CC) $(CFLAGS) $^ -o $@
 
+generafile : generafile.c
+	$(CC) $(CFLAGS) $^ -o $@
 
 exe	:
 	./main
 
 custom :
-	valgrind --track-origins=yes  --leak-check=full -s ./farm -q 3 -n 4 -d yeye file*
+	valgrind --track-origins=yes  --leak-check=full -s ./farm -q 3 -n 4 file*
 
 
 default :
-	valgrind --track-origins=yes   --leak-check=full --show-leak-kinds=all -s ./farm file* -t 2000
+	valgrind --track-origins=yes   --leak-check=full --show-leak-kinds=all -s ./farm file* -t 5000
 
 test:
 	make
@@ -34,3 +37,4 @@ test:
 clean :
 	rm -r testdir
 	rm file*
+	rm expected.txt
